# visionframework

./: .gitignore  ARCHITECTURE_RESTRUCTURING.md  CLEANUP_SUMMARY.md  COMPLETION_REPORT.md  FILE_MANIFEST.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  NOTICE  QUICK_REFERENCE.md  README.md  config_example.yaml  conftest.py  debug_pyav_frame.py  detections_results.json  my_config.json  pyproject.toml  requirements.txt  run_tests.py  setup.py  test_pyav_rtsp.py
.trae/documents/: Update Setup Files.md  plan_20260125_093220.md  plan_20260126_150513.md  plan_20260127_141726.md  代码精简简化计划.md  修改PyAVVideoProcessor以支持RTSP视频流.md  创建全面测试计划：SAM、分割、CLIP和姿态估计.md  工具类整理与测试计划.md  更新项目文件计划.md  更新项目文档.md  模型功能增强与扩展计划.md  测试新功能：SAM分割、CLIP和姿态估计.md  重组测试文件计划.md  集成 pyav 以提高视频处理效率.md
configs/components/: bytetrack.yaml  iou_tracker.yaml
configs/models/: detr_r50.yaml  osnet_reid.yaml  resnet50_seg.yaml  rfdetr_base.yaml  yolo11l.yaml  yolo11m.yaml  yolo11n.yaml  yolo11s.yaml  yolo11x.yaml  yolo26l.yaml  yolo26m.yaml  yolo26n.yaml  yolo26s.yaml  yolo26x.yaml  yolo_n.yaml  yolo_s.yaml
configs/runtime/: detect.yaml  detect_detr.yaml  detect_person.yaml  detect_rfdetr.yaml  detect_vehicles.yaml  detect_yolo26.yaml  reid_tracking.yaml  segmentation.yaml  tracking.yaml
docs/: API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_V0.2.8.md  CHANGELOG.md  FEATURES.md  INDEX.md  MIGRATION_GUIDE.md  PROJECT_STRUCTURE.md  QUICKSTART.md  QUICK_REFERENCE.md
examples/: 00_basic_detection.py  01_detection.py  01_detection_with_tracking.py  02_simplified_api.py  02_tracking.py  03_segmentation.py  03_video_processing.py  04_stream_processing.py  04_visualization.py  05_advanced_features.py  05_detr_detection.py  05_real_detection.py  06_tools_usage.py  06_yolo26_detection.py  07_rfdetr_detection.py  07_rtdetr_detection.py  08_segmentation_sam.py  11_config_based_processing.py  12_pyav_video_processing.py  13_vision_pipeline_pyav.py  README.md  advanced_features.py  basic_usage.py  batch_processing.py  clip_example.py  config_example.json  config_example.py  config_example.yaml  detect_basic.py  export_example.py  model_manager_example.py  my_config.json  ocr_example.py  pipeline_simple.py  pose_example.py  reid_example.py  rfdetr_example.py  rfdetr_tracking.py  roi_example.py  track_basic.py  (+3 more)
examples/advanced/: 05_advanced_features.py  06_clip_features.py  06_tools_usage.py  07_enhanced_features.py  08_model_tools_example.py  09_multimodal_processing.py  10_batch_processing.py  11_custom_component.py  12_result_export.py  13_roi_counting.py  14_heatmap.py  15_batch_images.py  16_model_optimization.py  17_performance_monitor.py
examples/basic/: 00_basic_detection.py  01_detection_with_tracking.py  02_simplified_api.py  03_pose_estimation.py  04_segmentation.py  05_video_processing.py
examples/config/: 11_config_based_processing.py
examples/models/: 08_segmentation_sam.py  09_clip_features.py  10_pose_estimation.py
examples/system/: 14_plugin_system_example.py  15_memory_pool_example.py  16_error_handling_example.py  17_dependency_management_example.py
examples/video/: 03_video_processing.py  04_stream_processing.py  12_pyav_video_processing.py  13_vision_pipeline_pyav.py
test/: README.md  test_config.py  test_core_pipeline.py  test_data_structures.py  test_memory_manager.py  test_new_features.py  test_pyav_integration.py  test_structure.py  test_task_api.py  test_utils_evaluation.py  test_utils_performance.py  test_utils_visualization.py
test/algorithms/: test_base_algorithm.py  test_rfdetr_pth_detector.py  test_rtdetr_pretrained.py  test_trackers.py  test_yolo_segmentation.py
test/core/: test_basic_api.py  test_batch_pipeline.py  test_builder.py  test_config.py  test_core_pipeline.py  test_processors.py  (+9 more)
tests/: __init__.py  conftest.py  quick_test.py  run_simple_tests.py  test_all.py  test_clip_integration.py  test_code_quality.py  test_core.py  test_detector_categories.py  test_detectors_batch_fp16.py  test_logging_exceptions.py  test_misc.py  test_models.py  test_pipeline_integration.py  test_rfdetr.py  test_structure.py  test_trackers.py  test_tracking.py  test_tracking_evaluator.py  test_utilities.py  test_utils.py  test_yolo_detector_batch_segmentation.py
tools/: convert_detr.py  convert_ultralytics.py  rfdetr_adapter.py  test_yolo26.py
visionframework/: __init__.py  api.py  exceptions.py  task_api.py
(+282 files in other folders)
