[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visionframework"
version = "0.2.10"
description = "A comprehensive vision framework for detection, tracking, and more with configuration management, model management, and device autoselection"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vision Framework Contributors"}
]
keywords = ["computer vision", "object detection", "object tracking", "yolo", "deep learning", "pydantic", "configuration management", "model management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "opencv-python>=4.8.0",
    "numpy>=1.24.0,<2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics>=8.0.0",
    "scipy>=1.10.0",
    "Pillow>=10.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    # Optional heavy dependencies moved to [project.optional-dependencies]
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

# Feature groups for optional heavy dependencies
clip = [
    "transformers>=4.30.0"
]

rfdetr = [
    "rfdetr>=0.1.0",
    "supervision>=0.18.0"
]

[tool.setuptools]
packages = ["visionframework"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

