[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visionframework"
version = "1.0.0"
description = "模块化、组件式计算机视觉框架 — 通过 backbone/neck/head 组件组合构建模型，YAML 配置驱动"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Vision Framework Contributors"}
]
keywords = [
    "computer vision", "object detection", "tracking", "segmentation",
    "reid", "deep learning", "modular", "component-based", "yaml config",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0,<2.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
scipy = ["scipy>=1.10.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "scipy>=1.10.0",
]
# ultralytics：仅 yolo-seg / rtdetr-verify 等可选能力；YOLO 检测权重 convert_ultralytics 不依赖此包
rtdetr-verify = ["ultralytics>=8.4.0"]
yolo-seg = ["ultralytics>=8.4.0"]

[tool.setuptools.packages.find]
include = ["visionframework*"]
exclude = ["test*", "configs*"]

[tool.pytest.ini_options]
testpaths = ["test"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-q --tb=short -m \"not yolo_seg\""
markers = [
    "rtdetr_official: 可选；需环境变量 RTDETR_L_PT、RTDETR_X_PT 指向官方 rtdetr-l.pt / rtdetr-x.pt（pytest -m rtdetr_official；未设置则 skip）",
    "yolo_seg: 需 pip install ultralytics；全尺寸 YOLO11/YOLO26 seg 权重下载与推理（较慢）。运行: pytest -m yolo_seg",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']
